# MainProject-Fridge

./: .gitignore  README.md  pyproject.toml
cellcook/: .gitignore
cellcook/config/: settings.py  urls.py
cellcook/fridge/: models.py  urls.py  views.py
cellcook/fridge/migrations/: 0001_initial.py
cellcook/templates/: base.html  egistration_success.html  fridge-main.html  ingredient.html  login.html  menu.html  recipe.html  signup.html
cellcook/users/: models.py  urls.py  validators.py  views.py
cellcook/users/migrations/: 0001_initial.py
